# pubgrub-py

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/pubgrub_py/: __init__.py  __init__.pyi  _core.pyi  resolve.py
src/: constraint.rs  error.rs  lib.rs  package.rs  resolver.rs
tests/: test_resolver.py
