[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pubgrub-py"
version = "1.1.0"
description = "Python bindings for the PubGrub version resolution algorithm"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yassin Chibrani-Derks" }]
keywords = ["dependency", "resolution", "version", "pubgrub", "semver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/YassinCh/pubgrub-py"
Repository = "https://github.com/YassinCh/pubgrub-py"
Issues = "https://github.com/YassinCh/pubgrub-py/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pubgrub_py._core"
